Add tests for Markdown formatted documentation

--- a/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_MarkdownDocumentedFeature.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_MarkdownDocumentedFeature.html
@@ -6,7 +6,7 @@
 
 	
 
-	<?php $group = 'Test extra docs group name'; ?>
+	<?php $group = 'markdown'; ?>
 
 	<section class="span4">
 		<aside class="well">
@@ -63,24 +63,23 @@
         		<hr>
         </ul>
 		</aside>
-		<?php getForumPosts( 'TestExtraDocs' ) ?>
+		<?php getForumPosts( 'MarkdownDocumentedFeature' ) ?>
 
 	</section>
 
 	<div class="span8">
 
-			<h1>TestExtraDocs **BETA**</h1>
+			<h1>MarkdownDocumentedFeature **BETA**</h1>
 
-		<p class="lead"><p>Class for testing extraDocs property in docgen.</p>
+		<p class="lead"><p>Documented feature formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a>.</p>
 </p>
 
 			<h3>Category
-				<small> Test extra docs group name</small>
+				<small> markdown</small>
 			</h3>
 		<hr>
 		<h2>Overview</h2>
-		<p>Class for testing extraDocs property in docgen.</p>
-
+		
 
 
 
