--- a/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/index.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/index.html
@@ -17,6 +17,35 @@
 <div class="accordion" id="index">
     <div class="accordion-group">
         <div class="accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#index" href="#markdown">
+                <h4>markdown</h4>
+            </a>
+        </div>
+        <div class="accordion-body collapse" id="markdown">
+            <div class="accordion-inner">
+                <p class="lead"><p><strong><em>Markdonw</em> Group Summary in bold</strong></p>
+</p>
+                <table class="table table-striped table-bordered table-condensed">
+                    <tr>
+                        <th>Name</th>
+                        <th>Summary</th>
+                    </tr>
+                            <tr>
+                                    <td><a href="org_broadinstitute_barclay_help_ClpWithMarkdownDocs.html">ClpWithMarkdownDocs **BETA**</a></td>
+                                <td><p>Tool where the documentation is formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a> <code>String</code>.</p>
+</td>
+                            </tr>
+                            <tr>
+                                    <td><a href="org_broadinstitute_barclay_help_MarkdownDocumentedFeature.html">MarkdownDocumentedFeature **BETA**</a></td>
+                                <td><p>Documented feature formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a>.</p>
+</td>
+                            </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="accordion-group">
+        <div class="accordion-heading">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#index" href="#Testextradocsgroupname">
                 <h4>Test extra docs group name</h4>
             </a>
@@ -45,7 +74,8 @@
         </div>
         <div class="accordion-body collapse" id="Testfeaturegroupname">
             <div class="accordion-inner">
-                <p class="lead">Test program group used for testing</p>
+                <p class="lead"><p>Test program group used for testing</p>
+</p>
                 <table class="table table-striped table-bordered table-condensed">
                     <tr>
                         <th>Name</th>
@@ -53,7 +83,8 @@
                     </tr>
                             <tr>
                                     <td><a href="org_broadinstitute_barclay_help_TestArgumentContainer.html">TestArgumentContainer **BETA**</a></td>
-                                <td>Argument container class for testing documentation generation.</td>
+                                <td><p>Argument container class for testing documentation generation.</p>
+</td>
                             </tr>
                 </table>
             </div>
