Parse Markdown javadoc and render as HTML (still allows pure HTML in javadoc)

--- a/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/index.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/index.html
@@ -60,7 +60,8 @@
                     </tr>
                             <tr>
                                     <td><a href="org_broadinstitute_barclay_help_TestExtraDocs.html">TestExtraDocs **BETA**</a></td>
-                                <td>Class for testing extraDocs property in docgen.</td>
+                                <td><p>Class for testing extraDocs property in docgen.</p>
+</td>
                             </tr>
                 </table>
             </div>
