--- a/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/org_broadinstitute_barclay_help_TestArgumentContainer.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/org_broadinstitute_barclay_help_TestArgumentContainer.html
@@ -78,8 +78,8 @@
 		<p>Argument container class for testing documentation generation. Contains an argument
 for each @Argument, @ArgumentCollection, and @DocumentedFeature property that should
 be tested.</p>
-<p>Test custom tag:
-testType</p>
+<p>Test custom tag:</p>
+<p>testType</p>
  <p>
  The purpose of this paragraph is to test embedded html formatting.
  <ol>
@@ -316,7 +316,8 @@ testType</p>
 		<p class="args">
 			<b><p>Positional arguments, min = 2, max = 2</p>
 </b><br />
-			Positional arguments, min = 2, max = 2
+			<p>Positional arguments, min = 2, max = 2</p>
+
 		</p>
 		<p>
 				<span class="badge badge-important">R</span>
@@ -330,7 +331,8 @@ testType</p>
 		<p class="args">
 			<b><p>advancedOptionalInt with initial value 1</p>
 </b><br />
-			Advanced, Optional int
+			<p>Advanced, Optional int</p>
+
 		</p>
 		<p>
 			<span class="label label-info ">int</span>
@@ -345,7 +347,8 @@ testType</p>
 		<p class="args">
 			<b><p>deprecated</p>
 </b><br />
-			Deprecated string
+			<p>Deprecated string</p>
+
 		</p>
 		<p>
 			<span class="label label-info ">int</span>
@@ -360,7 +363,8 @@ testType</p>
 		<p class="args">
 			<b><p>Undocumented option</p>
 </b><br />
-			Mutually exclusive args
+			<p>Mutually exclusive args</p>
+
 		</p>
 			<p><b>Exclusion:</b> This argument cannot be used at the same time as <code>READ1_ALIGNED_BAM, READ2_ALIGNED_BAM</code>.</p>
 		<p>
@@ -424,7 +428,8 @@ testType</p>
 		<p class="args">
 			<b><p>Optionals double with initial value 2.15</p>
 </b><br />
-			Required double
+			<p>Required double</p>
+
 		</p>
 		<p>
 			<span class="label label-info ">double</span>
@@ -439,7 +444,8 @@ testType</p>
 		<p class="args">
 			<b><p>optionalDoubleList with initial values: 100.0, 99.9, 99.0, 90.0</p>
 </b><br />
-			Optional double list.
+			<p>Optional double list.</p>
+
 		</p>
 		<p>
 			<span class="label label-info ">List[Double]</span>
@@ -452,7 +458,8 @@ testType</p>
 		<p class="args">
 			<b><p>Optional file list</p>
 </b><br />
-			Optional file list.
+			<p>Optional file list.</p>
+
 		</p>
 		<p>
 			<span class="label label-info ">List[File]</span>
@@ -465,7 +472,8 @@ testType</p>
 		<p class="args">
 			<b><p>Optional flag, defaults to false.</p>
 </b><br />
-			Optional flag.
+			<p>Optional flag.</p>
+
 		</p>
 		<p>
 			<span class="label label-info ">boolean</span>
@@ -504,7 +512,8 @@ testType</p>
 		<p class="args">
 			<b><p>An optional list of strings</p>
 </b><br />
-			Optional string list.
+			<p>Optional string list.</p>
+
 		</p>
 		<p>
 			<span class="label label-info ">List[String]</span>
@@ -540,7 +549,8 @@ testType</p>
 		<p class="args">
 			<b><p>Required file list</p>
 </b><br />
-			Required file list.
+			<p>Required file list.</p>
+
 		</p>
 		<p>
 				<span class="badge badge-important">R</span>
@@ -582,7 +592,8 @@ testType</p>
 		<p class="args">
 			<b><p>A required list of strings</p>
 </b><br />
-			Required string list.
+			<p>Required string list.</p>
+
 		</p>
 		<p>
 				<span class="badge badge-important">R</span>
