--- a/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_MarkdownDocumentedFeature.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_MarkdownDocumentedFeature.html
@@ -79,7 +79,8 @@
 			</h3>
 		<hr>
 		<h2>Overview</h2>
-		
+		<p>Documentation of this feature is written in Markdown and rendered as HTML.</p>
+
 
 
 
